Adjust font sizes and weights

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <section>
       <h1>Build Smarter Monitoring Algorithms With Less Of Your Budget</h1>
       <p>We'll adapt our annotation and modeling tools, help you create high-quality datasets, and build robust algorithms alongside your scientists and engineers.</p>
-      <div>Get in touch at: info@getpulse.ai</div>
+      <h4>Get in touch at: info@getpulse.ai</h4>
     </section>
     <footer>
       <div>© 2022 Pulse AI, LLC All rights reserved.</div>
