center text sections

--- a/index.html
+++ b/index.html
@@ -1,29 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pulse AI, LLC</title>
-  <meta name="description" content="
-  Build Smarter Monitoring Algorithms With Less Of Your Budget">
-  <meta name="keywords" content="pulse, ai, algorithms, datasets, medical">
-  <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-  <main>
-    <nav>
-      <img alt="images/pulse-ai-solid-logo-logo-full-color-rgb.svg" src="img/pulse-ai-solid-logo-logo-full-color-rgb.svg" style="height:50px">
-    </nav>
-    <section>
-      <h1>Build Smarter Monitoring Algorithms With Less Of Your Budget</h1>
-      <p>We'll adapt our annotation and modeling tools, help you create high-quality datasets, and build robust algorithms alongside your scientists and engineers.</p>
-      <h4>Get in touch at: info@getpulse.ai</h4>
-    </section>
-    <footer>
-      <div>© 2022 Pulse AI, LLC All rights reserved.</div>
-    </footer>
-  </main>
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Pulse AI, LLC</title>
+    <meta
+      name="description"
+      content="
+  Build Smarter Monitoring Algorithms With Less Of Your Budget"
+    />
+    <meta name="keywords" content="pulse, ai, algorithms, datasets, medical" />
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <main>
+      <nav>
+        <img
+          alt="images/pulse-ai-solid-logo-logo-full-color-rgb.svg"
+          src="img/pulse-ai-solid-logo-logo-full-color-rgb.svg"
+          style="height: 50px"
+        />
+      </nav>
+      <div class="middle">
+        <section>
+          <h1 class="section_item">
+            Build Smarter Monitoring Algorithms With Less Of Your Budget
+          </h1>
+          <p class="section_item">
+            We'll adapt our annotation and modeling tools, help you create
+            high-quality datasets, and build robust algorithms alongside your
+            scientists and engineers.
+          </p>
+          <h4 class="section_item">Get in touch at: info@getpulse.ai</h4>
+        </section>
+      </div>
+
+      <footer>
+        <div>© 2022 Pulse AI, LLC All rights reserved.</div>
+      </footer>
+    </main>
+  </body>
 </html>
