Use flexbox to have body fill page, and middle section fill area between header and footer

--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
   </head>
   <body>
     <main>
-      <nav>
+      <nav class="area">
         <img
           alt="images/pulse-ai-solid-logo-logo-full-color-rgb.svg"
           src="img/pulse-ai-solid-logo-logo-full-color-rgb.svg"
           style="height: 50px"
         />
       </nav>
-      <div class="middle">
-        <section>
+      <div class="area middle">
+        <section class="content_section">
           <h1 class="section_item">
             Build Smarter Monitoring Algorithms With Less Of Your Budget
           </h1>
@@ -32,11 +32,11 @@
             high-quality datasets, and build robust algorithms alongside your
             scientists and engineers.
           </p>
-          <h4 class="section_item">Get in touch at: info@getpulse.ai</h4>
+          <h4 class="section_item">Get in touch at: <br>info@getpulse.ai</h4>
         </section>
       </div>
 
-      <footer>
+      <footer  class="area">
         <div>© 2022 Pulse AI, LLC All rights reserved.</div>
       </footer>
     </main>
